--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
   },
   "jest": {
     "testEnvironment": "node",
-    "watchPathIgnorePatterns" : [
-      "test-dir" 
+    "watchPathIgnorePatterns": [
+      "test-dir"
     ]
   },
   "keywords": [],
@@ -34,6 +34,8 @@
   },
   "dependencies": {
     "cross-env": "^7.0.3",
-    "dotenv": "^14.2.0"
+    "crypto-js": "^4.1.1",
+    "dotenv": "^14.2.0",
+    "nanoid": "^4.0.0"
   }
 }
